@@ -10,12 +10,17 @@ import java.util.function.Function;
 
 /**
  * Immutable representation of the type state at a specific point in bytecode execution.
- * Contains the types of all local variables and the operand stack.
  */
-public final class TypeState {
+public final class TypeState
+{
     private static Function<String, String> superclassResolver;
 
-    public static void setSuperclassResolver(Function<String, String> resolver) {
+    /**
+     * Installs the global resolver used to walk superclass chains when merging reference types.
+     * @param resolver maps an internal class name to its superclass name, or null if unknown
+     */
+    public static void setSuperclassResolver(Function<String, String> resolver)
+    {
         superclassResolver = resolver;
     }
 
@@ -24,51 +29,63 @@ public final class TypeState {
 
     /**
      * Constructs a TypeState with the given locals and stack.
-     *
      * @param locals local variable types
      * @param stack operand stack types
      */
-    public TypeState(List<VerificationType> locals, List<VerificationType> stack) {
-        this.locals = Collections.unmodifiableList(new ArrayList<>(locals));
-        this.stack = Collections.unmodifiableList(new ArrayList<>(stack));
+    public TypeState(List<VerificationType> locals, List<VerificationType> stack)
+    {
+        this.locals = List.copyOf(locals);
+        this.stack = List.copyOf(stack);
     }
 
-    public List<VerificationType> getLocals() {
+    /**
+     * @return the locals
+     */
+    public List<VerificationType> getLocals()
+    {
         return locals;
     }
 
-    public List<VerificationType> getStack() {
+    /**
+     * @return the stack
+     */
+    public List<VerificationType> getStack()
+    {
         return stack;
     }
 
     /**
      * Creates an empty TypeState with no locals and empty stack.
-     *
      * @return empty TypeState
      */
-    public static TypeState empty() {
+    public static TypeState empty()
+    {
         return new TypeState(List.of(), List.of());
     }
 
     /**
      * Creates the initial TypeState from a method descriptor and access flags.
-     *
      * @param method the method entry
      * @param constPool the constant pool for resolving class references
      * @return initial TypeState at method entry
      */
-    public static TypeState fromMethodEntry(MethodEntry method, ConstPool constPool) {
+    public static TypeState fromMethodEntry(MethodEntry method, ConstPool constPool)
+    {
         List<VerificationType> locals = new ArrayList<>();
         String descriptor = method.getDesc();
         boolean isStatic = Modifiers.isStatic(method.getAccess());
 
-        if (!isStatic) {
+        if (!isStatic)
+        {
             String ownerClass = method.getOwnerName();
             int classIndex = constPool.findOrAddClass(ownerClass).getIndex(constPool);
 
-            if ("<init>".equals(method.getName())) {
+            if ("<init>".equals(method.getName()))
+            {
                 locals.add(VerificationType.UNINITIALIZED_THIS);
-            } else {
+            }
+            else
+            {
                 locals.add(VerificationType.object(classIndex));
             }
         }
@@ -80,20 +97,23 @@ public final class TypeState {
 
     /**
      * Parses the method descriptor to extract parameter types.
-     *
      * @param descriptor the method descriptor
      * @param locals list to populate with parameter types
      * @param constPool the constant pool
      */
-    private static void parseMethodParameters(String descriptor, List<VerificationType> locals, ConstPool constPool) {
-        if (!descriptor.startsWith("(")) {
+    private static void parseMethodParameters(String descriptor, List<VerificationType> locals, ConstPool constPool)
+    {
+        if (!descriptor.startsWith("("))
+        {
             throw new IllegalArgumentException("Invalid method descriptor: " + descriptor);
         }
 
         int i = 1;
-        while (i < descriptor.length() && descriptor.charAt(i) != ')') {
+        while (i < descriptor.length() && descriptor.charAt(i) != ')')
+        {
             char c = descriptor.charAt(i);
-            switch (c) {
+            switch (c)
+            {
                 case 'B':
                 case 'C':
                 case 'I':
@@ -118,7 +138,8 @@ public final class TypeState {
                     break;
                 case 'L':
                     int endIndex = descriptor.indexOf(';', i);
-                    if (endIndex == -1) {
+                    if (endIndex == -1)
+                    {
                         throw new IllegalArgumentException("Invalid object type in descriptor: " + descriptor);
                     }
                     String className = descriptor.substring(i + 1, endIndex);
@@ -128,23 +149,29 @@ public final class TypeState {
                     break;
                 case '[':
                     int arrayStart = i;
-                    while (i < descriptor.length() && descriptor.charAt(i) == '[') {
+                    while (i < descriptor.length() && descriptor.charAt(i) == '[')
+                    {
                         i++;
                     }
-                    if (i >= descriptor.length()) {
+                    if (i >= descriptor.length())
+                    {
                         throw new IllegalArgumentException("Invalid array type in descriptor: " + descriptor);
                     }
                     char elementType = descriptor.charAt(i);
-                    if (elementType == 'L') {
+                    if (elementType == 'L')
+                    {
                         int endIndex2 = descriptor.indexOf(';', i);
-                        if (endIndex2 == -1) {
+                        if (endIndex2 == -1)
+                        {
                             throw new IllegalArgumentException("Invalid array element type: " + descriptor);
                         }
                         String arrayDescriptor = descriptor.substring(arrayStart, endIndex2 + 1);
                         int classIndex2 = constPool.findOrAddClass(arrayDescriptor).getIndex(constPool);
                         locals.add(VerificationType.object(classIndex2));
                         i = endIndex2 + 1;
-                    } else {
+                    }
+                    else
+                    {
                         String arrayDescriptor = descriptor.substring(arrayStart, i + 1);
                         int classIndex3 = constPool.findOrAddClass(arrayDescriptor).getIndex(constPool);
                         locals.add(VerificationType.object(classIndex3));
@@ -159,24 +186,27 @@ public final class TypeState {
 
     /**
      * Returns the return type from a method descriptor.
-     *
      * @param descriptor the method descriptor
      * @param constPool the constant pool
      * @return return type or null for void
      */
-    public static VerificationType getReturnType(String descriptor, ConstPool constPool) {
+    public static VerificationType getReturnType(String descriptor, ConstPool constPool)
+    {
         int returnStart = descriptor.indexOf(')') + 1;
-        if (returnStart <= 0 || returnStart >= descriptor.length()) {
+        if (returnStart <= 0 || returnStart >= descriptor.length())
+        {
             throw new IllegalArgumentException("Invalid method descriptor: " + descriptor);
         }
 
         String returnDesc = descriptor.substring(returnStart);
-        if (returnDesc.equals("V")) {
+        if (returnDesc.equals("V"))
+        {
             return null;
         }
 
         char c = returnDesc.charAt(0);
-        switch (c) {
+        switch (c)
+        {
             case 'B':
             case 'C':
             case 'I':
@@ -204,39 +234,38 @@ public final class TypeState {
 
     /**
      * The operand-stack depth in slots (category-2 {@code long}/{@code double} count as 2, since they
-     * are stored with a {@code TOP} filler) — i.e. the {@code max_stack} contribution of this state.
-     *
+     * are stored with a {@code TOP} filler) - i.e. the {@code max_stack} contribution of this state.
      * @return the stack depth in slots
      */
-    public int stackSlots() {
+    public int stackSlots()
+    {
         return stack.size();
     }
 
     /**
      * Pushes a type onto the stack.
-     *
      * @param type the type to push
      * @return new state with type pushed
      */
-    public TypeState push(VerificationType type) {
+    public TypeState push(VerificationType type)
+    {
         List<VerificationType> newStack = new ArrayList<>(stack);
         newStack.add(type);
-        if (type.isTwoSlot()) {
+        if (type.isTwoSlot())
+        {
             newStack.add(VerificationType.TOP);
         }
         return new TypeState(locals, newStack);
     }
 
     /**
-     * Pushes a single raw stack entry, WITHOUT the category-2 {@code TOP} companion that {@link #push}
-     * appends for a long/double. Used by the stack-manipulation opcodes (dup/swap families) which
-     * reconstruct the stack slot by slot from {@link #peek(int)} results: re-{@link #push}ing a long's
-     * value slot would re-expand it into a {@code {VALUE, TOP}} pair and inflate the stack depth.
-     *
+     * Pushes a single raw stack entry, WITHOUT the category-2 {@code TOP} companion that {@link #push} appends for
+     * a long/double.
      * @param type the raw slot entry to push
      * @return new state with the entry pushed
      */
-    public TypeState pushRaw(VerificationType type) {
+    public TypeState pushRaw(VerificationType type)
+    {
         List<VerificationType> newStack = new ArrayList<>(stack);
         newStack.add(type);
         return new TypeState(locals, newStack);
@@ -244,11 +273,12 @@ public final class TypeState {
 
     /**
      * Pops a single type from the stack.
-     *
      * @return new state with top type removed
      */
-    public TypeState pop() {
-        if (stack.isEmpty()) {
+    public TypeState pop()
+    {
+        if (stack.isEmpty())
+        {
             throw new IllegalStateException("Stack underflow");
         }
         List<VerificationType> newStack = new ArrayList<>(stack);
@@ -258,12 +288,13 @@ public final class TypeState {
 
     /**
      * Pops n types from the stack.
-     *
      * @param n number of types to pop
      * @return new state with n types removed
      */
-    public TypeState pop(int n) {
-        if (n > stack.size()) {
+    public TypeState pop(int n)
+    {
+        if (n > stack.size())
+        {
             throw new IllegalStateException("Stack underflow: trying to pop " + n + " but stack has " + stack.size());
         }
         List<VerificationType> newStack = new ArrayList<>(stack.subList(0, stack.size() - n));
@@ -272,11 +303,12 @@ public final class TypeState {
 
     /**
      * Gets the type at the top of the stack without popping.
-     *
      * @return top stack type
      */
-    public VerificationType peek() {
-        if (stack.isEmpty()) {
+    public VerificationType peek()
+    {
+        if (stack.isEmpty())
+        {
             throw new IllegalStateException("Stack is empty");
         }
         return stack.get(stack.size() - 1);
@@ -284,13 +316,14 @@ public final class TypeState {
 
     /**
      * Gets the type at position from top.
-     *
      * @param fromTop offset from top (0 = top)
      * @return type at position
      */
-    public VerificationType peek(int fromTop) {
+    public VerificationType peek(int fromTop)
+    {
         int index = stack.size() - 1 - fromTop;
-        if (index < 0) {
+        if (index < 0)
+        {
             throw new IllegalStateException("Stack underflow");
         }
         return stack.get(index);
@@ -298,20 +331,29 @@ public final class TypeState {
 
     /**
      * Clears the stack.
-     *
      * @return new state with empty stack
      */
-    public TypeState clearStack() {
+    public TypeState clearStack()
+    {
         return new TypeState(locals, List.of());
     }
 
-    public TypeState replaceType(VerificationType oldType, VerificationType newType) {
+    /**
+     * Substitutes every occurrence of a type in both locals and stack.
+     * @param oldType the type to replace
+     * @param newType the replacement
+     * @return a new state with the substitution applied
+     */
+    public TypeState replaceType(VerificationType oldType, VerificationType newType)
+    {
         List<VerificationType> newLocals = new ArrayList<>(locals.size());
-        for (VerificationType local : locals) {
+        for (VerificationType local : locals)
+        {
             newLocals.add(local.equals(oldType) ? newType : local);
         }
         List<VerificationType> newStack = new ArrayList<>(stack.size());
-        for (VerificationType stackEntry : stack) {
+        for (VerificationType stackEntry : stack)
+        {
             newStack.add(stackEntry.equals(oldType) ? newType : stackEntry);
         }
         return new TypeState(newLocals, newStack);
@@ -319,30 +361,35 @@ public final class TypeState {
 
     /**
      * Sets a local variable at the given index.
-     *
      * @param index the local variable index
      * @param type the type to set
      * @return new state with local updated
      */
-    public TypeState setLocal(int index, VerificationType type) {
+    public TypeState setLocal(int index, VerificationType type)
+    {
         List<VerificationType> newLocals = new ArrayList<>(locals);
 
-        while (newLocals.size() <= index) {
+        while (newLocals.size() <= index)
+        {
             newLocals.add(VerificationType.TOP);
         }
 
         // Storing into slot `index` overwrites the SECOND slot of a two-slot value (long/double) occupying
         // index-1..index, so that value is no longer valid - mark its first slot TOP. Without this, slot reuse in
         // long/double-heavy code leaves a corrupt half-long in the frame (StackMapTable "bad type array size").
-        if (index > 0 && newLocals.get(index - 1).isTwoSlot()) {
+        if (index > 0 && newLocals.get(index - 1).isTwoSlot())
+        {
             newLocals.set(index - 1, VerificationType.TOP);
         }
 
         newLocals.set(index, type);
 
-        if (type.isTwoSlot() && index + 1 < newLocals.size()) {
+        if (type.isTwoSlot() && index + 1 < newLocals.size())
+        {
             newLocals.set(index + 1, VerificationType.TOP);
-        } else if (type.isTwoSlot()) {
+        }
+        else if (type.isTwoSlot())
+        {
             newLocals.add(VerificationType.TOP);
         }
 
@@ -351,12 +398,13 @@ public final class TypeState {
 
     /**
      * Gets the local variable type at the given index.
-     *
      * @param index the local variable index
      * @return type at index or TOP if out of bounds
      */
-    public VerificationType getLocal(int index) {
-        if (index >= locals.size()) {
+    public VerificationType getLocal(int index)
+    {
+        if (index >= locals.size())
+        {
             return VerificationType.TOP;
         }
         return locals.get(index);
@@ -364,56 +412,58 @@ public final class TypeState {
 
     /**
      * Gets the number of local variable slots used.
-     *
      * @return locals count
      */
-    public int getLocalsCount() {
+    public int getLocalsCount()
+    {
         return locals.size();
     }
 
     /**
      * Gets the current stack depth.
-     *
      * @return stack size
      */
-    public int getStackSize() {
+    public int getStackSize()
+    {
         return stack.size();
     }
 
     /**
      * Returns true if the stack is empty.
-     *
      * @return true if stack is empty
      */
-    public boolean isStackEmpty() {
+    public boolean isStackEmpty()
+    {
         return stack.isEmpty();
     }
 
     /**
      * Converts locals to VerificationTypeInfo list for writing to class file.
-     *
      * @return list of VerificationTypeInfo for locals
      */
-    public List<VerificationTypeInfo> localsToVerificationTypeInfo() {
+    public List<VerificationTypeInfo> localsToVerificationTypeInfo()
+    {
         return stripTwoSlotCompanions(locals);
     }
 
     /**
      * Converts stack to VerificationTypeInfo list for writing to class file.
-     *
      * @return list of VerificationTypeInfo for stack
      */
-    public List<VerificationTypeInfo> stackToVerificationTypeInfo() {
+    public List<VerificationTypeInfo> stackToVerificationTypeInfo()
+    {
         return stripTwoSlotCompanions(stack);
     }
 
-    private static List<VerificationTypeInfo> stripTwoSlotCompanions(List<VerificationType> types) {
+    private static List<VerificationTypeInfo> stripTwoSlotCompanions(List<VerificationType> types)
+    {
         List<VerificationTypeInfo> result = new ArrayList<>();
-        for (int i = 0; i < types.size(); i++) {
+        for (int i = 0; i < types.size(); i++)
+        {
             VerificationType type = types.get(i);
             result.add(type.toVerificationTypeInfo());
-            if (type.isTwoSlot() && i + 1 < types.size()
-                    && types.get(i + 1).equals(VerificationType.TOP)) {
+            if (type.isTwoSlot() && i + 1 < types.size() && types.get(i + 1).equals(VerificationType.TOP))
+            {
                 i++;
             }
         }
@@ -422,54 +472,80 @@ public final class TypeState {
 
     /**
      * Creates a copy of this state with the given stack replaced.
-     *
      * @param newStack the new stack
      * @return new state with replaced stack
      */
-    public TypeState withStack(List<VerificationType> newStack) {
+    public TypeState withStack(List<VerificationType> newStack)
+    {
         return new TypeState(locals, newStack);
     }
 
     /**
      * Creates a copy of this state with the given locals replaced.
-     *
      * @param newLocals the new locals
      * @return new state with replaced locals
      */
-    public TypeState withLocals(List<VerificationType> newLocals) {
+    public TypeState withLocals(List<VerificationType> newLocals)
+    {
         return new TypeState(newLocals, stack);
     }
 
-    public TypeState merge(TypeState other) {
+    /**
+     * Merges this state with another without a constant pool, so unequal reference types unify to TOP.
+     * @param other the state on the joining path
+     * @return the merged state
+     */
+    public TypeState merge(TypeState other)
+    {
         return merge(other, null);
     }
 
-    public TypeState merge(TypeState other, ConstPool constPool) {
+    /**
+     * Merges this state with another at a control-flow join, unifying locals slot-by-slot and
+     * reference stack entries to a common superclass when a pool is available.
+     * @param other the state on the joining path
+     * @param constPool pool used to intern merged reference types, or null to merge without one
+     * @return the merged state
+     */
+    public TypeState merge(TypeState other, ConstPool constPool)
+    {
         int maxLocals = Math.max(locals.size(), other.locals.size());
         List<VerificationType> mergedLocals = new ArrayList<>(maxLocals);
 
-        for (int i = 0; i < maxLocals; i++) {
+        for (int i = 0; i < maxLocals; i++)
+        {
             VerificationType a = (i < locals.size()) ? locals.get(i) : VerificationType.TOP;
             VerificationType b = (i < other.locals.size()) ? other.locals.get(i) : VerificationType.TOP;
             mergedLocals.add(mergeTypes(a, b, constPool));
         }
 
         List<VerificationType> mergedStack;
-        if (stack.equals(other.stack)) {
+        if (stack.equals(other.stack))
+        {
             mergedStack = stack;
-        } else if (stack.size() == other.stack.size()) {
+        }
+        else if (stack.size() == other.stack.size())
+        {
             mergedStack = new ArrayList<>(stack.size());
-            for (int i = 0; i < stack.size(); i++) {
+            for (int i = 0; i < stack.size(); i++)
+            {
                 mergedStack.add(mergeTypes(stack.get(i), other.stack.get(i), constPool));
             }
-        } else if (stack.isEmpty()) {
+        }
+        else if (stack.isEmpty())
+        {
             mergedStack = new ArrayList<>(other.stack);
-        } else if (other.stack.isEmpty()) {
+        }
+        else if (other.stack.isEmpty())
+        {
             mergedStack = new ArrayList<>(stack);
-        } else {
+        }
+        else
+        {
             int minSize = Math.min(stack.size(), other.stack.size());
             mergedStack = new ArrayList<>(minSize);
-            for (int i = 0; i < minSize; i++) {
+            for (int i = 0; i < minSize; i++)
+            {
                 mergedStack.add(mergeTypes(stack.get(i), other.stack.get(i), constPool));
             }
         }
@@ -477,18 +553,22 @@ public final class TypeState {
         return new TypeState(mergedLocals, mergedStack);
     }
 
-    private static VerificationType mergeTypes(VerificationType a, VerificationType b, ConstPool constPool) {
-        if (a.equals(b)) {
+    private static VerificationType mergeTypes(VerificationType a, VerificationType b, ConstPool constPool)
+    {
+        if (a.equals(b))
+        {
             return a;
         }
         boolean aIsRef = isReferenceType(a);
         boolean bIsRef = isReferenceType(b);
         if (aIsRef && b.equals(VerificationType.NULL)) return a;
         if (bIsRef && a.equals(VerificationType.NULL)) return b;
-        if (aIsRef && bIsRef && constPool != null) {
+        if (aIsRef && bIsRef && constPool != null)
+        {
             String aName = resolveTypeName(a, constPool);
             String bName = resolveTypeName(b, constPool);
-            if (aName != null && bName != null && superclassResolver != null) {
+            if (aName != null && bName != null && superclassResolver != null)
+            {
                 String common = findCommonSuperclass(aName, bName);
                 int classIndex = constPool.findOrAddClass(common).getIndex(constPool);
                 return VerificationType.object(classIndex);
@@ -499,27 +579,33 @@ public final class TypeState {
         return VerificationType.TOP;
     }
 
-    private static String resolveTypeName(VerificationType type, ConstPool constPool) {
-        if (type.getTag() == VerificationType.TAG_OBJECT) {
+    private static String resolveTypeName(VerificationType type, ConstPool constPool)
+    {
+        if (type.getTag() == VerificationType.TAG_OBJECT)
+        {
             VerificationType.ObjectType obj = (VerificationType.ObjectType) type;
             return constPool.getClassName(obj.getClassIndex());
         }
         return null;
     }
 
-    private static String findCommonSuperclass(String a, String b) {
+    private static String findCommonSuperclass(String a, String b)
+    {
         if (a.equals(b)) return a;
         if (superclassResolver == null) return "java/lang/Object";
 
         Set<String> aAncestors = new LinkedHashSet<>();
         String current = a;
-        while (current != null && !current.isEmpty() && aAncestors.add(current)) {
+        while (current != null && !current.isEmpty() && aAncestors.add(current))
+        {
             current = superclassResolver.apply(current);
         }
 
         current = b;
-        while (current != null && !current.isEmpty()) {
-            if (aAncestors.contains(current)) {
+        while (current != null && !current.isEmpty())
+        {
+            if (aAncestors.contains(current))
+            {
                 return current;
             }
             current = superclassResolver.apply(current);
@@ -528,7 +614,8 @@ public final class TypeState {
         return "java/lang/Object";
     }
 
-    private static boolean isReferenceType(VerificationType type) {
+    private static boolean isReferenceType(VerificationType type)
+    {
         return type.getTag() == VerificationType.TAG_OBJECT
                 || type.getTag() == VerificationType.TAG_NULL
                 || type.getTag() == VerificationType.TAG_UNINITIALIZED
@@ -536,7 +623,8 @@ public final class TypeState {
     }
 
     @Override
-    public boolean equals(Object o) {
+    public boolean equals(Object o)
+    {
         if (this == o) return true;
         if (!(o instanceof TypeState)) return false;
         TypeState that = (TypeState) o;
@@ -544,12 +632,14 @@ public final class TypeState {
     }
 
     @Override
-    public int hashCode() {
+    public int hashCode()
+    {
         return Objects.hash(locals, stack);
     }
 
     @Override
-    public String toString() {
+    public String toString()
+    {
         return "TypeState{locals=" + locals + ", stack=" + stack + "}";
     }
 }
